--- a/fly.toml
+++ b/fly.toml
@@ -1,53 +1,66 @@
-# fly.toml file generated for cs5500-f24-starterbot on 2023-04-15T03:46:52Z
+# fly.toml app configuration file generated for cs5500-f24-starterbot on 2024-11-09T22:40:41Z
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
 
-app = "cs5500-f24-starterbot"
-kill_signal = "SIGINT"
-kill_timeout = 5
-primary_region = "sea"
-processes = []
+app = 'cs5500-f24-starterbot'
+primary_region = 'sea'
+kill_signal = 'SIGINT'
+kill_timeout = '5s'
 
 [build]
-  builder = "paketobuildpacks/builder-jammy-full"
+  builder = 'paketobuildpacks/builder-jammy-full'
 
-[build.args]
-  BP_JVM_VERSION="17"
-  BP_INCLUDE_FILES="zagent/honey-javaagent.jar"
-  BP_OPENTELEMETRY_ENABLED="true"
-  BPE_JAVA_TOOL_OPTIONS="-Xss256K -XX:ReservedCodeCacheSize=64M -XX:MaxMetaspaceSize=64M -javaagent:zagent/honey-javaagent.jar"
+  [build.args]
+    BPE_JAVA_TOOL_OPTIONS = '-Xss256K -XX:ReservedCodeCacheSize=64M -XX:MaxMetaspaceSize=64M -javaagent:zagent/honey-javaagent.jar'
+    BP_INCLUDE_FILES = 'zagent/honey-javaagent.jar'
+    BP_JVM_VERSION = '17'
+    BP_OPENTELEMETRY_ENABLED = 'true'
 
 [deploy]
-  strategy = "canary"
+  strategy = 'canary'
 
 [env]
-  BPL_JVM_THREAD_COUNT = "50"
-  JAVA_TOOL_OPTIONS = "-Xss256K -XX:ReservedCodeCacheSize=64M -XX:MaxMetaspaceSize=64M -javaagent:zagent/honey-javaagent.jar"
-  OTEL_SERVICE_NAME="cs5500-f24-starterbot"
-  HONEYCOMB_METRICS_DATASET="production"
-  OTEL_JAVAAGENT_ENABLED="true"
-  OTEL_METRICS_EXPORTER="otlp"
-  OTEL_EXPOTER_OTLP_ENDPOINT="api.honeycomb.io:443"
+  BPL_JVM_THREAD_COUNT = '50'
+  HONEYCOMB_METRICS_DATASET = 'production'
+  JAVA_TOOL_OPTIONS = '-Xss256K -XX:ReservedCodeCacheSize=64M -XX:MaxMetaspaceSize=64M -javaagent:zagent/honey-javaagent.jar'
+  OTEL_EXPOTER_OTLP_ENDPOINT = 'api.honeycomb.io:443'
+  OTEL_JAVAAGENT_ENABLED = 'true'
+  OTEL_METRICS_EXPORTER = 'otlp'
+  OTEL_SERVICE_NAME = 'cs5500-f24-starterbot'
+
+[http_service]
+  internal_port = 8080
+  force_https = true
+  auto_stop_machines = 'stop'
+  auto_start_machines = true
+  min_machines_running = 0
+  processes = ['app']
 
 [[services]]
-  http_checks = []
+  protocol = 'tcp'
   internal_port = 8080
-  processes = ["app"]
-  protocol = "tcp"
-  script_checks = []
+  processes = ['app']
+
+  [[services.ports]]
+    port = 80
+    handlers = ['http']
+
+  [[services.ports]]
+    port = 443
+    handlers = ['tls', 'http']
+
   [services.concurrency]
+    type = 'connections'
     hard_limit = 25
     soft_limit = 20
-    type = "connections"
-
-  [[services.ports]]
-    handlers = ["http"]
-    port = 80
-
-  [[services.ports]]
-    handlers = ["tls", "http"]
-    port = 443
 
   [[services.tcp_checks]]
-    grace_period = "1s"
-    interval = "15s"
-    restart_limit = 6
-    timeout = "2s"
+    interval = '15s'
+    timeout = '2s'
+    grace_period = '1s'
+
+[[vm]]
+  memory = '512mb'
+  cpu_kind = 'shared'
+  cpus = 1
